<resources>
    <string name="app_name">LightBeam</string>
    <string name="title_activity_token_list">Lamps</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="no_lamps">No lamps!</string>
    <string name="token_tracking_marked_inactive">Token tracking marked inactive</string>
    <string name="token_tracking_maked_active">Token tracking marked active</string>
    <string name="error_while_changing_lamp_state">Error while changing lamp state</string>
    <string name="error_while_fetching_lamps">Error while fetching lamps</string>
    <string name="title_activity_lamp_details">Lamp Settings</string>
    <string name="lamp_settings_header">Lamp settings</string>
    <string name="name">Name</string>
    <string name="set_name">Set name</string>
    <string name="set_group_that_lamp_belongs_to">Set the group that lamps belongs to</string>
    <string name="group">Group</string>
    <string name="set_group">Set group</string>
    <string name="plain_white">Plain white</string>
    <string name="rotation_y">Rotation Y</string>
    <string name="rotation_z">Rotation Z</string>
    <string name="intensity">Intensity</string>
    <string name="save">Save</string>
    <string name="other_preferences">Other preferences</string>
    <string name="tracking">Token tracking</string>
    <string name="turned_on">Turned on</string>
    <string name="color">Color</string>
    <string name="mode">Mode</string>
    <string name="no_such_lamp">No such lamp</string>
    <string name="new_name">New name</string>
    <string name="error_loading_lamp">Error while loading lamp</string>
    <string name="settings_save_error">Couldn\'t save lamp settings</string>
    <string name="do_you_want_to_save">Do you want to save settings?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="settings_sent_to_lamp">Settings sent to lamp</string>
    <string name="other_settings">Other settings</string>
    <string name="title_activity_lamp_other">Other settings</string>
    <string name="time_of_day">Time of day</string>
    <string name="saturday_short">Sat</string>
    <string name="sunday_short">Sun</string>
    <string name="thursday_short">Thu</string>
    <string name="friday_short">Fri</string>
    <string name="wednesday_short">Wed</string>
    <string name="tuesday_short">Tue</string>
    <string name="monday_short">Mon</string>
    <string name="title_activity_schedules">Schedules</string>
    <string name="no_schedules">No schedules</string>
    <string name="title_activity_lamp_others">Other settings</string>
    <string name="schedules">Schedules</string>
    <string name="couldnt_change_tracking">Couldn\'t change tracking</string>
    <string name="couldnt_change_active_state">Couldn\'t change active state</string>
    <string name="lamp_turned_on">Lamp turned on</string>
    <string name="lamp_turned_off">Lamp turned off</string>
</resources>
