<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.xklakoux.lamp.lampdetails.LampDetailsFragment"
             tools:showIn="@layout/content_lamp_details">

    <ScrollView
        android:id="@+id/svSettings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    tools:text="Livingroom"/>


            </LinearLayout>


            <Switch
                android:id="@+id/sTracking"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                android:layout_gravity="center_vertical"
                android:checked="false"
                android:text="@string/tracking"/>

            <Switch
                android:id="@+id/sOn"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                android:layout_gravity="center_vertical"
                android:checked="false"
                android:text="@string/turned_on"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <FrameLayout
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:background="@android:color/black">

                    <LinearLayout
                        android:id="@+id/llColor"
                        android:layout_gravity="center"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:orientation="vertical"
                        tools:background="@color/colorAccent">
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mode"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <Spinner
                    android:id="@+id/spinnerMode"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/intensity"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <SeekBar
                    android:id="@+id/sbIntensity"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:indeterminate="false"
                    android:max="100"/>

                <TextView
                    android:id="@+id/tvIntensity"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:minWidth="50dp"
                    tools:text="100"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rotation_z"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <SeekBar
                    android:id="@+id/sbRotationZ"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:indeterminate="false"
                    android:max="360"/>

                <TextView
                    android:id="@+id/tvRotZ"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:minWidth="50dp"
                    tools:text="100"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rotation_y"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <SeekBar
                    android:id="@+id/sbRotationY"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:indeterminate="false"
                    android:max="180"/>

                <TextView
                    android:id="@+id/tvRotY"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:minWidth="50dp"
                    tools:text="0"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/group"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <Spinner
                    android:id="@+id/spinnerGroup"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog"/>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/otherSettings"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other_settings"/>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/llNoSuchLamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_lamp"
            android:tint="@color/colorAccent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/no_such_lamp"/>
    </LinearLayout>
</FrameLayout>